Add support for gateway hostname with optional port
- Enhanced gateway address validation to accept hostnames, not just IP addresses
- Support for hostname:port format (e.g., gateway.local:8080)
- Support for IPv4, IPv6, and hostnames with optional port numbers
- Updated error messages in English and French translations
- Added comprehensive test suite with 29 test cases
- Fully backward compatible with existing IP address configurations

--- a/custom_components/the_keys/translations/fr.json
+++ b/custom_components/the_keys/translations/fr.json
@@ -6,6 +6,7 @@
         "error": {
             "cannot_connect": "\u00c9chec de connexion",
             "invalid_phone_number": "Num\u00e9ro de t\u00e9l\u00e9phone invalide",
+            "invalid_gateway_ip": "Format d'adresse de passerelle invalide. Entrez une adresse IP, un nom d'h\u00f4te ou un nom d'h\u00f4te:port (par ex., 192.168.1.1, gateway.local, gateway.local:8080)",
             "unknown": "Unexpected error"
         },
         "step": {
