--- a/custom_components/the_keys/translations/en.json
+++ b/custom_components/the_keys/translations/en.json
@@ -3,11 +3,12 @@
         "abort": {
             "already_configured": "Device is already configured"
         },
-        "error": {
-            "cannot_connect": "Failed to connect",
-            "invalid_phone_number": "Invalid phone number",
-            "unknown": "Unexpected error"
-        },
+    "error": {
+      "cannot_connect": "[%key:common::config_flow::error::cannot_connect%]",
+      "unknown": "[%key:common::config_flow::error::unknown%]",
+      "invalid_phone_number": "[%key:common::config_flow::error::invalid_phone_number%]",
+      "invalid_gateway_ip": "Invalid gateway address format. Enter IP address, hostname, or hostname:port (e.g., 192.168.1.1, gateway.local, gateway.local:8080)"
+    },
         "step": {
             "user": {
                 "data": {
